--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Lady of the Lake (Legendary character) -- Poetry'
 - !lcc 'PR'
+- GITenberg
 title: The Lady of the Lake
 url: http://www.gutenberg.org/ebooks/28287
